@@ -18,7 +18,8 @@
 #include <gsl/gsl_multimin.h>
 
 #include <iCub/iKinFwd.h>
-#include <iCub/trajectoryGenerator.h>
+#include <iCub/minJerkCtrl.h>
+#include <iCub/pids.h>
 
 #define IKINCTRL_STATE_RUNNING      0
 #define IKINCTRL_STATE_INTARGET     1
@@ -889,8 +890,8 @@ private:
     MultiRefMinJerkCtrl &operator=(const MultiRefMinJerkCtrl&);
 
 protected:
-    ctrl::minJerkTrajGen *genTrajJoint;
-    ctrl::minJerkTrajGen *genTrajTask;
+    ctrl::minJerkVelCtrl *mjCtrlJoint;
+    ctrl::minJerkVelCtrl *mjCtrlTask;
     ctrl::Integrator     *Int;
 
     yarp::sig::Vector q_set;
