@@ -1,4 +1,7 @@
 
+2010-03-06 Ugo Pattacini <ugo.pattacini@iit.it>
+	   * minJerkTrajGen changed into minJerkCtrl
+
 2010-02-18 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * minJerkTrajGen: feedback formulation (Shadmehr)
 
